
5.69  2014-12-08
  - Removed deprecated emit_safe method from Mojo::EventEmitter.
  - Removed deprecated render_static method from Mojolicious::Controller.
  - Improved Mojo::DOM::HTML performance slightly.
  - Fixed parent combinator bug in Mojo::DOM::CSS.
  - Fixed whitespace bug in Mojo::DOM::HTML.
  - Fixed Mojo::UserAgent::Transactor to handle query parameters more like
    most common browsers.

5.68  2014-12-02
  - Improved Mojo::DOM::CSS performance significantly.
  - Fixed deprecation warnings in get command.
  - Fixed bug in Mojolicious::Controller where sending a WebSocket message
    would cause multiple resume events.

5.67  2014-11-27
  - Improved overall performance by deserializing sessions only on demand.
  - Fixed bug where embedded applications would deserialize sessions twice.

5.66  2014-11-26
  - Improved many WebSocket tests in Test::Mojo to be able to fail gracefully.
  - Fixed bug in Mojo::DOM::CSS where the :empty pseudo class would not ignore
    comments and processing instructions.

5.65  2014-11-24
  - Improved installable scripts to use #!perl. (jberger)
  - Improved Mojo::JSON security by escaping the "/" character.
  - Improved Mojolicious::Commands to reset the global Getopt::Long
    configuration more safely.
  - Fixed bug in Mojo::DOM::CSS where selected results would also include the
    current root element.

5.64  2014-11-22
  - Fixed bug in Mojolicious::Commands where the global Getopt::Long
    configuration would be changed after a command had already been loaded.

5.63  2014-11-21
  - Improved portability of some tests.
  - Fixed a few multipart form handling bugs.

5.62  2014-11-18
  - Fixed bug in Mojolicious::Routes::Pattern where optional placeholders in
    nested routes would sometimes not work correctly.
  - Fixed bug where "handler" was not an allowed name for controller methods.

5.61  2014-11-14
  - Moved entities.txt into the DATA section of Mojo::Util to avoid
    gratuitously breaking module bundlers.
