@@ -8,6 +8,6 @@ plan skip_all => 'Test::Pod::Coverage 1.04 required for this test!'
   unless eval 'use Test::Pod::Coverage 1.04; 1';
 
 # DEPRECATED in Tiger Face!
-my @tiger = qw(decode encode error has_conditions new pluck val);
+my @tiger = qw(decode encode error new pluck val);
 
 all_pod_coverage_ok({also_private => [@tiger]});
